# gr-aoa

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md  phased_array_elements_separation_calc.ods  real_case_music_test.grc  real_case_music_test_with_mag_eqalization.grc
accuracy_measurments/: aoa_accurcacy_test_bench.grc  test_bench_setup_pymodule.py
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.aoa
examples/: autocorr_block_sync_input_testing.grc  corr_coeff_mav_test.grc  head_block_with_rst_msg_test.grc  music_4rx_2tx_autocorrelate_eval.grc  music_4rx_2tx_with_phase_jitter.grc  music_algo_simulation_2rx_magnitude_difference_effects.grc  music_algo_simulation_2rx_with_noise.grc  music_algo_simulation_4rx_2tx_no_phase_jitter.grc  precise_mav_test.grc  real_case_music_test.grc  resettable_head_block_test_2.grc  shift_phase_block_test.grc
gr-aoa/: MANIFEST.md
grc/: aoa_MUSIC_lin_array.block.yml  aoa_calc_phase_diff.block.yml  aoa_calc_phase_diff_multiple_hier.block.yml  aoa_correlate.block.yml  aoa_head_w_rst.block.yml  aoa_precise_moving_average.block.yml  aoa_rootMUSIC_linear_array.block.yml  aoa_shift_phase.block.yml  (+1 more)
python/aoa/bindings/: CMakeLists.txt  MUSIC_lin_array_python.cc  calc_phase_diff_python.cc  correlate_python.cc  failed_conversions.txt  head_w_rst_python.cc  precise_moving_average_python.cc  python_bindings.cc  rootMUSIC_linear_array_python.cc  shift_phase_python.cc
python/aoa/bindings/docstrings/: MUSIC_lin_array_pydoc_template.h  calc_phase_diff_pydoc_template.h  correlate_pydoc_template.h  head_w_rst_pydoc_template.h  precise_moving_average_pydoc_template.h  rootMUSIC_linear_array_pydoc_template.h  shift_phase_pydoc_template.h
(+132 files in other folders)
